bpo-37947: Adjust correctly the recursion level in symtable for named expressions (GH-15499)